--- a/css/main.css
+++ b/css/main.css
@@ -42,7 +42,7 @@ a span{
 }
 body{
     background-color: #F4F4F4;
-    overflow: hidden;
+    min-width: 1200px;
 }
 
 .nav-item{
@@ -63,6 +63,9 @@ body{
     height: 35px;
     width: auto;
     background-color: #f5f5f5;
+}
+.wrapper-title a:hover{
+    color: #f40;
 }
 .wrapper-title-nav-top{
     height: 35px;
@@ -237,6 +240,10 @@ body{
     background-color: white;
     display: inline-block;
     border-top: none;
+}
+.wrapper-body-left li:hover{
+    background-color: #ffe4dc;
+    color: #ff5000;
 }
 .wrapper-body-ul i{
     font-size: 14px;
@@ -622,4 +629,41 @@ body{
     display: block;
     width: 32px;
     height: 32px;
+}
+.taobao-news{
+    background-color: #FFF;
+    width: 856px;
+    height: 73px;
+    padding: 14px 14px 12px 20px;
+    margin-top: 10px;
+}
+.taobao-news-img{
+    width: 150px;
+    height: 73px;
+    float: left;
+}
+.taobao-news>a>img{
+    float: left;
+    width: 130px;
+    height: 60px;
+}
+.taobao-news p{
+    color: #999;
+    line-height: 24px;
+}
+.taobao-news-paragraph{
+    margin-top: -10px;
+    margin-left: 20px;
+    width: 510px;
+    height: 63px;
+    float: left;
+}
+#news-p{
+    font-size: 16px;
+    color: #000;
+}
+.wrapper-life{
+    width: 1190px;
+    height: 166px;
+    margin: 0 auto;
 }
